# gf2x

./: ChangeLog  Makefile.am  NEWS  README  README.git-tree  bench.c  check-gf2x-version.c  configure.ac  fft.c  gf2x.c  gf2x.h  gf2x.h.in  gf2x.h.in.in  no-distribute.txt  toom-gpl.c  toom.c  toom128.c  wipeout-autotools
already_tuned/armv7l/: gf2x-thresholds.h  gf2x_mul1.h
already_tuned/coreihwl/: gf2x-thresholds.h
already_tuned/generic32/: gf2x-thresholds.h
already_tuned/generic64/: gf2x-thresholds.h  gf2x_mul1.h
already_tuned/opteron/: gf2x-thresholds.h  gf2x_mul1.h
already_tuned/x86_64/: gf2x-thresholds.h  gf2x_mul1.h
already_tuned/x86_64_pclmul/: gf2x-thresholds.h
already_tuned/x86_sse2/: gf2x-thresholds.h  gf2x_mul1.h
apps/: Makefile.am  factor.cpp
config/: acinclude.m4
fft/: Makefile.am  README.cantor  bench.c  cantor.c  cantor.h  configure.ac  fake_fft.c  fake_fft.h  fft_adapter.hpp  gf2x-cantor-fft.c  gf2x-cantor-fft.h  gf2x-fake-fft.c  gf2x-fake-fft.h  gf2x-fft.h  gf2x-ternary-fft.c  gf2x-ternary-fft.h  gf2x_fft_check.c  macros.h
fft/config/: acinclude.m4
fft/mpfq/: Makefile.mpfq  better-integrate-gf2x.patch  mpfq.h  mpfq_2_128.h  mpfq_2_64.h
fft/mpfq/i386/: mpfq_2_128.h  mpfq_2_64.h
fft/mpfq/x86_64/: mpfq_2_128.c  mpfq_2_128.h  mpfq_2_64.c  mpfq_2_64.h
fft/scripts/: check_cantor.sh
gf2x/: gf2x-impl-export.h  gf2x-impl.h  gf2x-small.h  gf2x-tfft.h
jenkins/: check-generic.sh  check-macos-108-amd64.sh  check-out-of-source.sh  check-plafrim-icc.sh  check-raspbian-7-armv7l.sh  check-tuning-uses-correct-lib.sh  check-ubuntu-1204-i386.sh  check-with-gf2x-fft.sh  common.sh  dist-lgpl.sh  dist.sh  tune-fedora-20-amd64.sh  tune-generic.sh
src/: Makefile.am  check_small_size.c  gen_bb_mul_code.c  generate-test-list.pl  modify-thresholds.c  mul1cl.c  mul2cl.c  mul2cl2.c  mul2k.c  mul2t.c  mul2t2.c  mul3cl.c  mul3k.c  mul3k2.c  mul3k3.c  mul3t.c  mul4cl1.c  mul4clk.c  mul4k.c  mul4t.c  mul5clk_c.c  mul5k3.c  mul5k_a.c  mul5k_b.c  mul5k_c.c  mul5k_d.c  mul6clk2.c  mul6k_a.c  mul6k_b.c  mul6k_c.c  mul7cl.c  mul7k.c  mul7k3.c  mul8k.c  mul9cl.c  mul9clk2.c  mul9k.c  mul9k2.c  mul9k3.c  replace.c  (+12 more)
tests/: Makefile.am  bench.c  check-addmul.c  check-and-bench-common.c  check-and-bench-common.h  check-mul.c  check.c  do-check-fft.sh  do-check-mul.sh  generate-fft-tests.pl  test-tools.c
tests/fft/: Makefile.am  check.c  do-check-fft.sh
trunk/src/: update-thresholds.c
